<resources>
    <string name="app_name">FourWithFriends</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">he know da lingo</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="drop">Drop Token</string>
    <string name="game_fragment">Game Fragment</string>
    <string name="loading_text">Loading...</string>
    <string name="host_ip_default">localhost</string>
    <string name="port_number_default">16789</string>
    <string name="host_ip_text">Host IP</string>
    <string name="port_number_text">Port number</string>
    <string name="connect_text">Connect</string>
</resources>
